Link tec para nav

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="#sobre" aria-label="Sobre Mim">Sobre Mim</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#tecnologias" aria-label="Projetos">Tecnologias</a></li>
                     <li class="nav-item"><a class="nav-link" href="#projetos" aria-label="Projetos">Projetos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contato" aria-label="Contato">Contato</a></li>
                 </ul>
