--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Portfólio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
@@ -43,16 +43,20 @@
                     <img src="img/319948241_1402189353860971_3276105110638588237_n.jpg"
                         class="img-fluid roundedcircle mb-3" alt="Perfil">
                 </div>
-                <div class="col-md-8 ">
+                <div class="sobre-textos col-md-8 ">
                     <h2>Sobre Mim</h2>
-                    <p>Olá! Meu nome é [Seu Nome], sou um desenvolvedor
-                        Full Stack com paixão por criar soluções inovadoras e eficien
-                        tes. Tenho experiência em diversas tecnologias e frameworks,
-                        e estou sempre buscando aprender e me aprimorar.</p>
-                    <p>Minhas habilidades incluem HTML, CSS, JavaScrip
-                        t, React, Node.js, entre outras. Adoro trabalhar em equipe e
-                        acredito que a colaboração é a chave para o sucesso de qualqu
-                        er projeto.</p>
+                    <p>Olá! Meu nome é [Seu Nome], sou um desenvolvedorFull Stack com paixão por criar soluções inovadoras e eficientes. Tenho experiência em diversas tecnologias e frameworks, e estou sempre buscando aprender e me aprimorar.</p>
+                    <p>Minhas habilidades incluem HTML, CSS, JavaScript, React, Node.js, entre outras. Adoro trabalhar em equipe eacredito que a colaboração é a chave para o sucesso de qualquer projeto.</p>
+                    <div class="container-redes">
+                        <ul class="redes">
+                            <li><a href="https://github.com/mabielmuller" target="_blank"><img src="img/icons8-github.svg" alt=""></a></li>
+                            <li><a href="https://www.linkedin.com/in/mabiel-muller/" target="_blank"><img src="img/icons8-linkedin.svg" alt=""></a></li>
+                            <li><a href="https://www.instagram.com/mabimuller13/" target="_blank"><img src="img/icons8-instagram.svg" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="">
+                    <a href="#" download="" class="btn btn-primary">Baixar curriculo</a>
                 </div>
             </div>
         </div>
@@ -62,9 +66,9 @@
     <!--Tecnologias-->
     <section id="tecnologias" class="py-5">
         <div class="container">
-            <h2 class="text-center mb-4">Tecnologias</h2>
+            <h2 class="text-center mb-4 my-3">Tecnologias</h2>
             <div class="row">
-                <div class="col-md-4">
+                <div class=" tec-box col-md-4">
                     <ul class="list-group py-2">
                         <li class="list-group-item active " aria-current="true">Front-end</li>
                         <li class="list-group-item"> <img src="img/icons8-html5.svg" alt="Html5 Logo"> Html5</li>
