--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 
     <!-- Sobre Mim -->
-    <section id="sobre" class="py-5 bg-light">
+    <section id="sobre" class="py-5 bg-#fff">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -53,10 +53,10 @@
                             <li><a href="https://www.linkedin.com/in/mabiel-muller/" target="_blank"><img src="img/icons8-linkedin.svg" alt=""></a></li>
                             <li><a href="https://www.instagram.com/mabimuller13/" target="_blank"><img src="img/icons8-instagram.svg" alt=""></a></li>
                         </ul>
+                        <div class="">
+                            <a href="#" download="" class="btn btn-primary">Baixar curriculo</a>
+                        </div>
                     </div>
-                </div>
-                <div class="">
-                    <a href="#" download="" class="btn btn-primary">Baixar curriculo</a>
                 </div>
             </div>
         </div>
