Criando submit para contatos

--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
 
     <!-- Cabeçalho -->
     <header class=" cabecalho bg-dark text-white text-center py-5">
-        <nav class="navbar navbar-expand-lg navbar-light " style= 'background-color: #e3f2fd'; data-mdb-theme="light">
+        <nav class="navbar navbar-expand-lg navbar-light " style='background-color: #e3f2fd' ; data-mdb-theme="light">
             <a class="navbar-brand px-3" href="#">Meu Portfólio</a>
-            <button class="navbar-toggler mx-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler mx-1" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="#sobre" aria-label="Sobre Mim">Sobre Mim</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#tecnologias" aria-label="Projetos">Tecnologias</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#tecnologias" aria-label="Projetos">Tecnologias</a>
+                    </li>
                     <li class="nav-item"><a class="nav-link" href="#projetos" aria-label="Projetos">Projetos</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contato" aria-label="Contato">Contato</a></li>
                 </ul>
@@ -37,7 +39,7 @@
 
     <!-- Sobre Mim -->
     <section id="sobre" class="py-5 bg-#fff">
-        <div class="container">
+        <div class="container py-4">
             <div class="row">
                 <div class="col-md-4">
                     <img src="img/319948241_1402189353860971_3276105110638588237_n.jpg"
@@ -45,13 +47,23 @@
                 </div>
                 <div class="sobre-textos col-md-8 ">
                     <h2>Sobre Mim</h2>
-                    <p>Olá! Meu nome é [Seu Nome], sou um desenvolvedorFull Stack com paixão por criar soluções inovadoras e eficientes. Tenho experiência em diversas tecnologias e frameworks, e estou sempre buscando aprender e me aprimorar.</p>
-                    <p>Minhas habilidades incluem HTML, CSS, JavaScript, React, Node.js, entre outras. Adoro trabalhar em equipe eacredito que a colaboração é a chave para o sucesso de qualquer projeto.</p>
+                    <p>Olá! Meu nome é Mabiel Muller. Sou estudante de Análise e Desenvolvimento de Sistemas pela PUCRS,
+                        nascido e criado em Igrejinha-RS, com um sonho claro: transformar ideias em soluções
+                        tecnológicas que impactem positivamente a vida das pessoas. Minha paixão pela tecnologia vai
+                        além da curiosidade, é o motor que me leva a buscar, a cada dia, maneiras de aprimorar minhas
+                        habilidades e ampliar meu conhecimento.</p>
+                    <p>Desde o momento em que comecei a explorar o mundo do desenvolvimento, percebi que criar soluções
+                        digitais é como dar vida a ideias. Cada linha de código é uma peça fundamental em um
+                        quebra-cabeça que, quando completo, traz à tona a realização de um projeto que antes só existia
+                        na imaginação.</p>
                     <div class="container-redes">
                         <ul class="redes">
-                            <li><a href="https://github.com/mabielmuller" target="_blank"><img src="img/icons8-github.svg" alt=""></a></li>
-                            <li><a href="https://www.linkedin.com/in/mabiel-muller/" target="_blank"><img src="img/icons8-linkedin.svg" alt=""></a></li>
-                            <li><a href="https://www.instagram.com/mabimuller13/" target="_blank"><img src="img/icons8-instagram.svg" alt=""></a></li>
+                            <li><a href="https://github.com/mabielmuller" target="_blank"><img
+                                        src="img/icons8-github.svg" alt=""></a></li>
+                            <li><a href="https://www.linkedin.com/in/mabiel-muller/" target="_blank"><img
+                                        src="img/icons8-linkedin.svg" alt=""></a></li>
+                            <li><a href="https://www.instagram.com/mabimuller13/" target="_blank"><img
+                                        src="img/icons8-instagram.svg" alt=""></a></li>
                         </ul>
                         <div class="">
                             <a href="#" download="" class="btn btn-primary">Baixar curriculo</a>
@@ -65,7 +77,7 @@
 
     <!--Tecnologias-->
     <section id="tecnologias" class="py-5">
-        <div class="container">
+        <div class="container py-4">
             <h2 class="text-center mb-4 my-3">Tecnologias</h2>
             <div class="row">
                 <div class=" tec-box col-md-4">
@@ -81,7 +93,7 @@
                         <li class="list-group-item"> <img src="img/icons8-visualizar-js.svg" alt=""> Vue</li>
                         <li class="list-group-item"> <img src="img/icons8-angular.svg" alt=""> Angular</li>
                         <li class="list-group-item"> <img src="img/icons8-docker.svg" alt=""> Docker</li>
-                      </ul>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-group py-2">
@@ -93,16 +105,16 @@
                         <li class="list-group-item"><img src="img/icons8-c.svg" alt=""> C++</li>
                         <li class="list-group-item"><img src="img/icons8-python.svg" alt=""> Python</li>
                         <li class="list-group-item"><img src="img/icons8-django.svg" alt=""> Django</li>
-                      </ul>
+                    </ul>
                 </div>
                 <div class="col-md-4">
                     <ul class="list-group py-2">
                         <li class="list-group-item active" aria-current="true">Banco de Dados</li>
                         <li class="list-group-item"><img src="img/icons8-mysql.svg" alt=""> MySql</li>
                         <li class="list-group-item"><img src="img/icons8-mongodb.svg" alt=""> MongoDb</li>
-                      </ul>
+                    </ul>
                 </div>
-                
+
             </div>
         </div>
     </section>
@@ -110,7 +122,7 @@
 
     <!-- Projetos -->
     <section id="projetos" class="py-5">
-        <div class="container">
+        <div class="container py-5">
             <h2 class="text-center mb-4">Projetos</h2>
             <div class="row">
                 <div class="col-md-4">
@@ -182,27 +194,25 @@
     <!-- Contato -->
     <section id="contato" class="py-5 bg-light">
         <div class="container">
-            <h2 class="text-center mb-4">Contato</h2>
+            <h3 class="text-center">Entre em contato</h3><br />
+
             <div class="row">
-                <div class="col-md-8 offset-md-2">
-                    <form>
-                        <div class="form-group">
-                            <label for="nome">Nome</label>
-                            <input type="text" class="form-control" id="nome" placeholder="Seu nome">
-                        </div>
-                        <div class="form-group">
-                            <label for="email">Email</label>
-                            <input type="email" class="form-control" id="email" placeholder="Seu email">
-                        </div>
-                        <div class="form-group">
-                            <label for="mensagem">Mensagem</label>
-                            <textarea class="form-control" id="mensagem" ro ws="4"
-                                placeholder="Sua mensagem"></textarea>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Enviar</button>
-                    </form>
+                <div class="col-md-8">
+                    <form action="https://formsubmit.co/mabielmuller9@gmail.com" method="POST">
+                        <input class="form-control" name="name" placeholder="Seu nome..." />
+                        <input class="form-control" name="email" placeholder="Seu e-mail..." />
+                        <textarea class="form-control" name="text" placeholder="Digite o que quer escrever..." style="height:150px;"></textarea>
+                        <input class="btn btn-primary" type="submit" value="Enviar para meu e-mail"/>
+                </div>
+                <div class="col-md-4">
+                    <b>Meu contato:</b> <br />
+                    Celular: +55 51989255123 <br />
+                    E-mail: mabielmuller9@gmail.com <br />
+                    <a href="https://wa.me/5551989255123" class="btn btn-primary">Fale comigo pelo whatssap!</a>
+                    
                 </div>
             </div>
+
         </div>
     </section>
 
