alterações de estilo

--- a/index.html
+++ b/index.html
@@ -202,13 +202,13 @@
                         <input class="form-control" name="name" placeholder="Seu nome..." />
                         <input class="form-control" name="email" placeholder="Seu e-mail..." />
                         <textarea class="form-control" name="text" placeholder="Digite o que quer escrever..." style="height:150px;"></textarea>
-                        <input class="btn btn-primary" type="submit" value="Enviar para meu e-mail"/>
+                        <input class="btn btn-primary mb-2" type="submit" value="Enviar para meu e-mail"/>
                 </div>
                 <div class="col-md-4">
                     <b>Meu contato:</b> <br />
                     Celular: +55 51989255123 <br />
                     E-mail: mabielmuller9@gmail.com <br />
-                    <a href="https://wa.me/5551989255123" class="btn btn-primary">Fale comigo pelo whatssap!</a>
+                    <a href="https://wa.me/5551989255123" class="btn btn-primary mt-2">Fale comigo pelo whatssap!</a>
                     
                 </div>
             </div>
