--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="css/custom.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -125,66 +126,94 @@
         <div class="container py-5">
             <h2 class="text-center mb-4">Projetos</h2>
             <div class="row">
+
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="img/projeto1.jpg" class="card-img-top" alt="Projeto 1">
+                        <div class="d-flex justify-content-center p-3">
+                            <img src="img/icons8-frente-de-loja-100 (1).png" class="card-img-top " alt="Projeto 1">
+                        </div>
                         <div class="card-body">
-                            <h5 class="card-title">Projeto 1</h5>
-                            <p class="card-text">Descrição breve do Projeto1.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Ecomerce</h5>
+                            <p class="card-text">Landing page de e-commerce desenvolvida com HTML, CSS e Bootstrap, focada em design responsivo e experiência de usuário otimizada.
+                                <br> <img src="img/icons8-html5.svg" alt=""> <img src="img/icons8-css.svg" alt=""> <img src="img/icons8-bootstrap.svg" alt="">
+                            </p>
+                            <a href="https://github.com/mabielmuller/Ecomerce-Meteora" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
+                            <a href="https://ecomerce-meteora.vercel.app" class="btn btn-primary"> <i class="bi bi-globe"></i> Ver Online</a>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="img/projeto2.jpg" class="card-img-top" alt="Projeto 2">
+                        <div class="d-flex justify-content-center p-3">
+                            <img src="img/icons8-café-100.png" class="card-img-top" alt="Projeto 2">
+                        </div>
                         <div class="card-body">
-                            <h5 class="card-title">Projeto 2</h5>
-                            <p class="card-text">Descrição breve do Projeto2.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Cafeteria</h5>
+                            <p class="card-text">Landing page de cafeteria criada com HTML, CSS, Bootstrap e JavaScript, destacando interatividade e design elegante.
+                                <br> <img src="img/icons8-html5.svg" alt=""> <img src="img/icons8-css.svg" alt=""> <img src="img/icons8-javascript.svg" alt=""> <img src="img/icons8-bootstrap.svg" alt="">
+                            </p>
+                            <a href="#" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
+                            <a href="#" class="btn btn-primary"> <i class="bi bi-globe"></i> Ver Online</a>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
+                        <div class="d-flex justify-content-center p-3">
+                            <img src="img/icons8-hambúrguer-100.png" class="card-img-top" alt="Projeto 3">
+                        </div>
+                        <div class="card-body">
+                            <h5 class="card-title">Cardapio online</h5>
+                            <p class="card-text">Template de cardápio online já utilizado por restaurantes reais para modernizar suas operações e entregar uma melhor experiencia para o usuario
+                                <br> <img src="img/icons8-html5.svg" alt=""> <img src="img/icons8-css.svg" alt=""> <img src="img/icons8-javascript.svg" alt=""> <img src="img/icons8-tailwind-css.svg" alt="">
+                            </p>
+                            <a href="https://github.com/mabielmuller/Mabi-Burguer" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
+                            <a href="https://mabi-burguer.vercel.app" class="btn btn-primary"> <i class="bi bi-globe"></i> Ver Online</a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4">
+                    <div class="card mb-4">
+                        <div class="d-flex justify-content-center p-3">
+                            <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Projeto 3</h5>
                             <p class="card-text">Descrição breve do Projeto3.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
+                        <div class="d-flex justify-content-center p-3">
+                            <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Projeto 3</h5>
                             <p class="card-text">Descrição breve do Projeto3.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
                         </div>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="card mb-4">
-                        <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
+                        <div class="d-flex justify-content-center p-3">
+                            <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
+                        </div>
                         <div class="card-body">
                             <h5 class="card-title">Projeto 3</h5>
                             <p class="card-text">Descrição breve do Projeto3.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <a href="#" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="img/projeto3.jpg" class="card-img-top" alt="Projeto 3">
-                        <div class="card-body">
-                            <h5 class="card-title">Projeto 3</h5>
-                            <p class="card-text">Descrição breve do Projeto3.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                    </div>
-                </div>
+
             </div>
         </div>
     </section>
