--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
                             <p class="card-text">Landing page de cafeteria criada com HTML, CSS, Bootstrap e JavaScript, destacando interatividade e design elegante.
                                 <br> <img src="img/icons8-html5.svg" alt=""> <img src="img/icons8-css.svg" alt=""> <img src="img/icons8-javascript.svg" alt=""> <img src="img/icons8-bootstrap.svg" alt="">
                             </p>
-                            <a href="#" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
-                            <a href="#" class="btn btn-primary"> <i class="bi bi-globe"></i> Ver Online</a>
+                            <a href="https://github.com/mabielmuller/Cafeteria" class="btn btn-primary"> <i class="bi bi-github"></i> Github do projeto</a>
+                            <a href="https://cafeteria-xi.vercel.app" class="btn btn-primary"> <i class="bi bi-globe"></i> Ver Online</a>
                         </div>
                     </div>
                 </div>
