Alteração de tabela

--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
                         <li class="list-group-item"> <img src="img/icons8-reagir.svg" alt=""> ReactJs</li>
                         <li class="list-group-item"> <img src="img/icons8-visualizar-js.svg" alt=""> Vue</li>
                         <li class="list-group-item"> <img src="img/icons8-angular.svg" alt=""> Angular</li>
-                        <li class="list-group-item"> <img src="img/icons8-docker.svg" alt=""> Docker</li>
                     </ul>
                 </div>
                 <div class="col-md-4">
@@ -110,9 +109,10 @@
                 </div>
                 <div class="col-md-4">
                     <ul class="list-group py-2">
-                        <li class="list-group-item active" aria-current="true">Banco de Dados</li>
+                        <li class="list-group-item active" aria-current="true">Banco de Dados/DevOps</li>
                         <li class="list-group-item"><img src="img/icons8-mysql.svg" alt=""> MySql</li>
                         <li class="list-group-item"><img src="img/icons8-mongodb.svg" alt=""> MongoDb</li>
+                        <li class="list-group-item"> <img src="img/icons8-docker.svg" alt=""> Docker</li>
                     </ul>
                 </div>
 
