--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                         <li class="list-group-item"> <img src="img/icons8-html5.svg" alt="Html5 Logo"> Html5</li>
                         <li class="list-group-item"> <img src="img/icons8-css.svg" alt="Css3 Logo"> Css3</li>
                         <li class="list-group-item"> <img src="img/icons8-javascript.svg" alt=""> JavaScript</li>
-                        <li class="list-group-item"> <img src="img/icons8-sass.svg" alt=""> Sass</li>
+                        <li class="list-group-item"> <img src="img/icons8-atrevimento.svg" alt=""> Sass</li>
                         <li class="list-group-item"> <img src="img/icons8-bootstrap.svg" alt=""> Bootstrap</li>
                         <li class="list-group-item"> <img src="img/icons8-tailwind-css.svg" alt=""> Tailwind</li>
                         <li class="list-group-item"> <img src="img/icons8-reagir.svg" alt=""> ReactJs</li>
