--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                     <i class="bi bi-github"></i> <span class="link-text">Github do projeto</span>
                                 </a>
                                 <a href="https://ecomerce-meteora.vercel.app" class="btn btn-primary online-link">
-                                    <i class="bi bi-globe"></i> <span class="link-text">Ver Online</span>
+                                    <i class="bi bi-globe"></i> <span class="link-text">Ver online</span>
                                 </a>
                         </div>
                     </div>
@@ -177,7 +177,7 @@
                                 <i class="bi bi-github"></i> <span class="link-text">Github do projeto</span>
                             </a>
                             <a href="https://cafeteria-xi.vercel.app" class="btn btn-primary online-link">
-                                <i class="bi bi-globe"></i> <span class="link-text">Ver Online</span>
+                                <i class="bi bi-globe"></i> <span class="link-text">Ver online</span>
                             </a>
                         </div>
                     </div>
@@ -203,7 +203,7 @@
                                 <i class="bi bi-github"></i> <span class="link-text">Github do projeto</span>
                             </a>
                             <a href="https://mabi-burguer.vercel.app" class="btn btn-primary online-link">
-                                <i class="bi bi-globe"></i> <span class="link-text">Ver Online</span>
+                                <i class="bi bi-globe"></i> <span class="link-text">Ver online</span>
                             </a>
                         </div>
                     </div>
@@ -221,7 +221,7 @@
                                 <i class="bi bi-github"></i> <span class="link-text">Github do projeto</span>
                             </a>
                             <a href="https://ecomerce-meteora.vercel.app" class="btn btn-primary online-link">
-                                <i class="bi bi-globe"></i> <span class="link-text">Ver Online</span>
+                                <i class="bi bi-globe"></i> <span class="link-text">Ver online</span>
                             </a>
                         </div>
                     </div>
@@ -239,7 +239,7 @@
                                 <i class="bi bi-github"></i> <span class="link-text">Github do projeto</span>
                             </a>
                             <a href="https://ecomerce-meteora.vercel.app" class="btn btn-primary online-link">
-                                <i class="bi bi-globe"></i> <span class="link-text">Ver Online</span>
+                                <i class="bi bi-globe"></i> <span class="link-text">Ver online</span>
                             </a>
                         </div>
                     </div>
@@ -257,7 +257,7 @@
                                 <i class="bi bi-github"></i> <span class="link-text">Github do projeto</span>
                             </a>
                             <a href="https://ecomerce-meteora.vercel.app" class="btn btn-primary online-link">
-                                <i class="bi bi-globe"></i> <span class="link-text">Ver Online</span>
+                                <i class="bi bi-globe"></i> <span class="link-text">Ver online</span>
                             </a>
                         </div>
                     </div>
