adicionando um modelo novo de projeto

--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
                 <div class="col-md-4">
                     <div class="card mb-4">
                         <div class="d-flex justify-content-center p-3">
-                            <img src="img/icons8-frente-de-loja-100 (1).png" class="card-img-top" alt="Projeto 1">
+                            <img src="img/icons8-api-100.png" class="card-img-top" alt="Projeto 1">
                         </div>
                         <div class="card-body">
-                            <h5 class="card-title" id="projeto1-titulo">Ecomerce</h5>
+                            <h5 class="card-title" id="projeto1-titulo">API Restaurante</h5>
                             <p class="card-text" id="projeto1-descricao">
                                 Landing page de e-commerce desenvolvida com HTML, CSS e Bootstrap, focada em design responsivo e experiência de usuário otimizada.
                             </p>
